--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -195,7 +195,7 @@ VENDOR_ENHANCED_PROCESS=0
 
 PROCESS_NAME=xtwifi-inet-agent
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc03
@@ -208,7 +208,7 @@ VENDOR_ENHANCED_PROCESS=1
 
 PROCESS_NAME=xtwifi-client
 PROCESS_ARGUMENT=
-PROCESS_STATE=ENABLED
+PROCESS_STATE=DISABLED
 PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xd03
