--- a/init/init.lahaina.perf.rc
+++ b/init/init.lahaina.perf.rc
@@ -31,3 +31,7 @@ on property:vendor.post_boot.parsed=1
     # IRQ 275: kgsl_3d0_irq
     write /proc/irq/278/smp_affinity_list 2
     write /proc/irq/275/smp_affinity_list 1
+
+    # CPUSets
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
+    setprop dalvik.vm.dex2oat-threads 6
