--- a/init/init.cust.rc
+++ b/init/init.cust.rc
@@ -14,3 +14,7 @@ on property:vendor.post_boot.parsed=1
     # IRQ 240: kgsl_3d0_irq
     write /proc/irq/243/smp_affinity_list 2
     write /proc/irq/240/smp_affinity_list 1
+
+    # CPUSets
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
+    setprop dalvik.vm.dex2oat-threads 6
