--- a/init/init.cust.rc
+++ b/init/init.cust.rc
@@ -9,6 +9,7 @@ on property:vendor.post_boot.parsed=1
     write /dev/cpuset/background/cpus 0-3
     write /dev/cpuset/restricted/cpus 0-3
     write /dev/cpuset/system-background/cpus 0-3
+    write /dev/cpuset/foreground/cpus 0-6
 
     # IRQ Tuning
     # IRQ 243: msm_drm
