--- a/init/init.lahaina.perf.rc
+++ b/init/init.lahaina.perf.rc
@@ -57,3 +57,13 @@ on property:vendor.post_boot.parsed=1
 
 on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.zram
+
+service lahaina-post-boot /vendor/bin/init.lahaina.post_boot.sh
+    class late_start
+    user root
+    group root system wakelock graphics
+    disabled
+    oneshot
+
+on property:vendor.post_boot.parsed=1
+    start lahaina-post-boot
