lahaina: init: Disable multiple kswapd threads
https://lore.kernel.org/lkml/20180403133115.GA5501@dhcp22.suse.cz/

Change-Id: Ifc72726ad3c44bc0838d78031f70971f0677cd0e

--- a/init/init.lahaina.perf.rc
+++ b/init/init.lahaina.perf.rc
@@ -78,6 +78,9 @@ on property:vendor.post_boot.parsed=1
     write /sys/block/dm-8/queue/read_ahead_kb 128
     write /sys/block/dm-9/queue/read_ahead_kb 128
 
+    # Disable multiple kswapd threads
+    write /proc/sys/vm/kswapd_threads 1
+
     # IRQ Tuning
     # IRQ 278: msm_drm
     # IRQ 275: kgsl_3d0_irq
