lahaina: init: Import default cpuset parameters
Change-Id: I7808eb3c38f07bacdf2fc8049c0fae89cda07de4

--- a/init/init.cust.rc
+++ b/init/init.cust.rc
@@ -5,6 +5,10 @@
 #
 
 on property:vendor.post_boot.parsed=1
+    # cpuset parameters
+    write /dev/cpuset/background/cpus 0-3
+    write /dev/cpuset/system-background/cpus 0-3
+
     # IRQ Tuning
     # IRQ 243: msm_drm
     # IRQ 240: kgsl_3d0_irq
