--- a/init/init.lahaina.perf.rc
+++ b/init/init.lahaina.perf.rc
@@ -47,6 +47,14 @@ on property:vendor.post_boot.parsed=1
     write /dev/cpuset/foreground/cpus 0-6
     write /dev/cpuset/audio-app/cpus 1-2
 
+    # CPUFreq
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/up_rate_limit_us 500
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/down_rate_limit_us 20000
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/up_rate_limit_us 1000
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/down_rate_limit_us 10000
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/up_rate_limit_us 2000
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/down_rate_limit_us 5000
+
     # Runtime fs tuning
     write /sys/block/sda/queue/read_ahead_kb 128
     write /sys/block/sda/queue/nr_requests 128
