lahaina: init: Set blkio profile for SSG The kernel will experiment around SSG reuiring [1] and [2] commits. This will be a noop when the kernel disables SSG, so keep this in.
Reference:
[1] https://gerrit.aospa.co/c/AOSPA/android_kernel_realme_sm8350/+/33695
[2] https://gerrit.aospa.co/c/AOSPA/android_kernel_realme_sm8350/+/33696/1

Testing:
[ElectroPerf & resist15]
In testing we found out that there were significant improvements
in the sequential read and write speeds. Some screenshots of the tests are below:

Before SSG: https://i.imgur.com/UBL74X2.jpg
After SSG: https://i.imgur.com/CrkD5iE.jpg

Edit:
[snnbyyds]
Opt for rc instead of script

Co-authored-by: snnbyyds <snnbyyds@gmail.com>
Co-authored-by: Juhyung Park <qkrwngud825@gmail.com>

--- a/init/init.cust.rc
+++ b/init/init.cust.rc
@@ -1,5 +1,9 @@
 #
 # Copyright (C) 2023 The LineageOS Project
+# Copyright (C) 2023 Paranoid Android
 #
 # SPDX-License-Identifier: Apache-2.0
 #
+
+on init
+    write /dev/blkio/background/blkio.ssg.max_available_ratio 25
